--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tweets Page</title>
-  <link href="/css_basic/base.css" rel="stylesheet">
+  <link href="base.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
 <body>
