--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -12,6 +12,7 @@
   <!-- Header with navigation -->
   <header>
     <ul>
+      <li class="logo">logo</li>
       <li><a href="index.html">Home</a></li>
       <li><a href="tweets.html">Tweets</a></li>
     </ul>
