--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+            <img src="/css_advanced/images/logo.png" alt="logo">
           
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -18,46 +18,47 @@
                 <li><a href="#">LOGIN</a></li>
             </ul>
         </nav>
-        
-    </header>
-    <main>
-        <section>
+        <section class="header-section">
             <div>
                 <h1>Get schooled</h1>
-                <span>SMILES</span>
-                <span>GRIN</span>
-                <span>LAUGH</span>
+                <div class="hero-tags">
+                  <span>SMILES</span>
+                  <span>GRIN</span>
+                  <span>LAUGH</span>
+                </div>
                 <button>REGISTER FOR FREE</button>
             </div>
             <div>
-                <h2>Learn from the pros</h2>
-                <div>
+                <h2><span>Learn</span> from the pros</h2>
+                <div class="people-container">
                     <div>
-                        <img src="./images/1 (3).png" alt="">
+                        <img src="./images/1.png" alt="">
                         <h3>Phillip Massey</h3>
-                        <p>« Smile of the year » 2018 - 2019</p>
+                        <p><i>« Smile of the year »<br/> 2018 - 2019</i></p>
                     </div>
                     <div>
-                        <img src="./images/6.png" alt="">
+                        <img src="./images/3.png" alt="">
                         <h3>Nannie Lawrence</h3>
-                        <p>Best « little smile » 2017</p>
+                        <p><i>Best « little smile » <br/> 2017 </i></p>
                     </div>
                     <div>
-                        <img src="./images/7.png" alt="">
+                        <img src="./images/2.png" alt="">
                         <h3>Bruce Walters</h3>
-                        <p>Best « Friend Smile » live performance 2019</p>
+                        <p><i>Best « Friend Smile »<br/> live performance 2019</p>
                     </div>
                     <div>
-                        <img src="./images/8.png" alt="">
+                        <img src="./images/4.png" alt="">
                         <h3>Henry Hughes</h3>
-                        <p>« 24h smiles » winner 2016 - 2019</p>
+                        <p><i>« 24h smiles » winner <br/>2016 - 2019</i></p>
                     </div>
                 </div>
             </div>
         </section>
+    </header>
+    <main>
         <section>
             <div>
-                <img src="./images/Bitmap.png" alt="image">
+                <img src="./images/5.png" alt="image">
             </div>
             <div>
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
@@ -198,7 +199,7 @@
     <footer>
         <section>
             <div>
-                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+                <img src="/css_advanced/images/logo.png" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
