--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -29,7 +29,7 @@
                   <span>GRIN</span>
                   <span>LAUGH</span>
                 </div>
-                <button>REGISTER FOR FREE</button>
+                <button class="header-reg-button">REGISTER FOR FREE</button>
             </div>
             <div>
                 <h2><span>Learn</span> from the pros</h2>
@@ -155,29 +155,31 @@
         </section>
 
         <!-------------------membership-section------------------>
-        <section>
-            <h2>Free membership</h2>
+        <section class="membership-section">
+                <h2><span>Free</span> membership</h2>
+                <div class="membership-features">
+                <div>
+                    <img src="./images/smile.png" alt="smile icon">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
             <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <img src="./images/smile.png" alt="smile icon">
+              <h3>Lorem ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <img src="./images/smile.png" alt="smile icon">
+              <h3>Lorem ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <img src="./images/smile.png" alt="smile icon">
+              <h3>Lorem ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div>
-                <img src="./images/smile.svg" alt="">
-                <h3>Lorem Ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
-            <button>REGISTER FOR FREE</button>
+          </div>
+          <button class="membership-btn">REGISTER FOR FREE</button>
         </section>
 
         <!-------------------faq-section------------------->
