--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -206,17 +206,17 @@
 </section>
     </main>
     <footer>
-        <section>
-            <div>
-                <img src="/css_advanced/images/logo.png" alt="logo">
-                <div>
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                </div>
-            </div>
-            <p>©smileschool 2020</p>
-        </section>
-    </footer>
+  <div class="footer-content">
+    <div class="footer-logo-social">
+      <img src="./images/logo.png" alt="SmileSchool logo" class="footer-logo">
+      <div class="footer-social">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i><img src="/css_advanced/social media icon/Facebook_White.png" alt=""></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i><img src="/css_advanced/social media icon/Twitter_White.png" alt=""></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i><img src="/css_advanced/social media icon/Instagram_White.png" alt=""></a>
+      </div>
+    </div>
+    <p class="footer-copy">&copy; smileschool 2020</p>
+  </div>
+</footer>
 </body>
 </html>
