i added the WHAT WE DO section

--- a/headphones/1-index.html
+++ b/headphones/1-index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="0-styles.css">
+  <link rel="stylesheet" href="1-styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -41,6 +42,39 @@
       </p>
     </div>
   </main>
+
+  <section class="what-we-do">
+    <div class="section-description">
+      <h2>What we do...</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+    </div>
+
+    <div class="icon-services">
+      <div class="icon-block1">
+        <img src="/headphones/images/sound.png" alt="Sound Icon">
+        <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+      </div>
+      
+      <div class="icon-block2">
+        <img src="/headphones/images/video icon.png" alt="Video Icon">
+        <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+      </div>
+
+      <div class="icon-block3">
+        <img src="/headphones/images/music icon.png" alt="Music Icon">
+        <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+      </div>
+
+      <div class="icon-block4">
+        <img src="/headphones/images/listen icon.png" alt="Hearing Icon">
+        <p>Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+      </div>
+    </div>
+    
+  </section>
+
   <script>
     document.addEventListener('DOMContentLoaded', function () {
   const navToggle = document.querySelector('.nav-toggle');
