--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="0-styles.css">
   <link rel="stylesheet" href="/alx_html_css/headphones/1-styles.css">
+  <link rel="stylesheet" href="/alx_html_css/headphones/2-styles.css"
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -78,6 +79,31 @@
     </div>
      
   </section>
+
+  <section class="our-results-section">
+  <div class="ourResultContainer">
+    <h2>Our results speak for themselves</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+  </div>
+  <div class="results-hexagons">
+    <div class="hexagon">
+      <span class="percent">+2%</span>
+      <span class="desc">Lorem ipsum dolor</span>
+    </div>
+    <div class="hexagon">
+      <span class="percent">+2%</span>
+      <span class="desc">Lorem ipsum dolor</span>
+    </div>
+    <div class="hexagon">
+      <span class="percent">+2%</span>
+      <span class="desc">Lorem ipsum dolor</span>
+    </div>
+    <div class="hexagon">
+      <span class="percent">+2%</span>
+      <span class="desc">Lorem ipsum dolor</span>
+    </div>
+  </div>
+</section>
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
